examples/test/testpolicy14157.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14157
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key0: value2
      key36: value26
      key6: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value1
          key42: value37
      podSelector:
        matchLabels:
          key40: value20
          key15: value10
          key45: value12
